--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sass:build": "sass src/assets/sass/main.scss src/assets/css/main.css",
     "sass:watch": "sass --watch styles/main.scss assets/css/style.css",
-    "start": "npx eleventy --serve --port=6269",
+    "start": "npx sass src/assets/sass/main.scss src/assets/css/main.css && npx eleventy --serve --port=6269",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
