--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "tailwindcss": "^3.4.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1"
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "tailwind": "^4.0.0"
   }
 }
