--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: origin/main # Branch to update (optional; defaults to master)
+  branch: origin # Branch to update (optional; defaults to master)
 media_folder: "assets/images" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/assets/images"
 
